[package]
name = "bokv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1.0"
tokio-util = {version = "0.7", features = ["codec"]}
anyhow = "1.0.64"
byteorder = "1"
crc = "3"

[build-dependencies]
prost-build = "0.11"

[[bin]]
name = "bokv_server"
path = "src/server.rs"

[[bin]]
name = "bokv_client"
path = "src/client.rs"

